@@ -4,11 +4,11 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.io.BufferedReader;
+import java.io.InputStreamReader;
+import java.net.HttpURLConnection;
 import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
-import java.time.Duration;
+import java.net.URL;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.Executors;
@@ -17,15 +17,12 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 
 /**
- * Mock 规则订阅客户端
+ * Mock 规则订阅客户端 - 真正的 SSE 长连接版
  *
- * 通过 SSE (Server-Sent Events) 订阅 Control Plane 的 Mock 规则变更
- * 当规则变更时，自动更新本地 MockRuleManager 缓存
- *
- * 使用方式：
- * 1. Consumer 启动时调用 MockRuleSubscriptionClient.subscribe(serviceName)
- * 2. 规则变更会自动同步到 MockRuleManager
- * 3. RPC 调用时自动命中 Mock 规则，短路网络请求
+ * 关键修复：
+ * 1. 使用 HttpURLConnection 保持长连接，不断读取流
+ * 2. 自动重连机制，连接断开后 5 秒内重新连接
+ * 3. 收到 rule-change 事件后立即同步刷新缓存
  *
  * @author Lumina-RPC Team
  * @since 1.0.0
@@ -41,9 +38,7 @@ public class MockRuleSubscriptionClient {
 
     // 订阅状态
     private static final AtomicBoolean subscribed = new AtomicBoolean(false);
-
-    // HTTP 客户端
-    private static HttpClient httpClient;
+    private static final AtomicBoolean connecting = new AtomicBoolean(false);
 
     // 重连调度器
     private static ScheduledExecutorService reconnectScheduler;
@@ -51,17 +46,12 @@ public class MockRuleSubscriptionClient {
     // 已订阅的服务列表
     private static volatile List<String> subscribedServices;
 
-    static {
-        httpClient = HttpClient.newBuilder()
-                .connectTimeout(Duration.ofSeconds(10))
-                .build();
-    }
+    // SSE 连接
+    private static Thread sseReaderThread;
+    private static HttpURLConnection sseConnection;
 
     /**
      * 初始化并订阅 Mock 规则
-     *
-     * @param controlPlane Control Plane 地址
-     * @param serviceNames 需要订阅的服务名称列表
      */
     public static void init(String controlPlane, List<String> serviceNames) {
         if (controlPlane != null && !controlPlane.isEmpty()) {
@@ -72,101 +62,117 @@ public class MockRuleSubscriptionClient {
         // 首次拉取所有规则
         fetchAllRules(serviceNames);
 
-        // 启动 SSE 订阅
+        // 启动 SSE 订阅（带自动重连）
         subscribe(serviceNames);
     }
 
     /**
-     * 订阅 Mock 规则变更
-     *
-     * @param serviceNames 服务名称列表
+     * 订阅 Mock 规则变更 - 真正的长连接版本
      */
     public static void subscribe(List<String> serviceNames) {
         if (subscribed.compareAndSet(false, true)) {
-            // 启动后台线程监听 SSE
-            Thread sseThread = new Thread(() -> {
+            // 初始化重连调度器
+            reconnectScheduler = Executors.newSingleThreadScheduledExecutor(r -> {
+                Thread t = new Thread(r, "sse-reconnect");
+                t.setDaemon(true);
+                return t;
+            });
+
+            // 启动 SSE 连接线程
+            startSseLongConnection();
+
+            logger.info("📡 [Mock-SSE] ✅ SSE 长连接已启动，服务: {}", serviceNames);
+        }
+    }
+
+    /**
+     * 启动真正的 SSE 长连接 - 不断读取流！
+     */
+    private static void startSseLongConnection() {
+        if (connecting.compareAndSet(false, true)) {
+            // 在新线程中运行 SSE 读取
+            sseReaderThread = new Thread(() -> {
                 while (subscribed.get()) {
                     try {
-                        startSseConnection(serviceNames);
+                        connectAndReadStream();
                     } catch (Exception e) {
-                        logger.warn("SSE connection failed, will retry in 5 seconds: {}", e.getMessage());
-                        try {
-                            Thread.sleep(5000);
-                        } catch (InterruptedException ie) {
-                            Thread.currentThread().interrupt();
-                            break;
+                        logger.error("❌ [Mock-SSE] SSE 连接异常: {}", e.getMessage());
+                    } finally {
+                        // 连接断开，5 秒后重连
+                        if (subscribed.get()) {
+                            logger.info("🔄 [Mock-SSE] 连接断开，5秒后重连...");
+                            try {
+                                Thread.sleep(5000);
+                            } catch (InterruptedException ie) {
+                                Thread.currentThread().interrupt();
+                                break;
+                            }
                         }
                     }
                 }
-            }, "mock-rule-sse-client");
-            sseThread.setDaemon(true);
-            sseThread.start();
+            }, "sse-stream-reader");
+            sseReaderThread.setDaemon(true);
+            sseReaderThread.start();
 
-            logger.info("📡 [Mock-SSE] Started SSE subscription for services: {}", serviceNames);
+            connecting.set(false);
         }
     }
 
     /**
-     * 建立 SSE 连接
+     * 连接并持续读取 SSE 流
      */
-    @SuppressWarnings("unchecked")
-    private static void startSseConnection(List<String> serviceNames) {
-        // 订阅所有服务的规则变更
+    private static void connectAndReadStream() throws Exception {
         String sseUrl = controlPlaneUrl + "/api/v1/sse/subscribe/all";
+        logger.info("📡 [Mock-SSE] 正在连接 SSE: {}", sseUrl);
 
-        logger.info("📡 [Mock-SSE] Connecting to SSE endpoint: {}", sseUrl);
+        URL url = new URL(sseUrl);
+        sseConnection = (HttpURLConnection) url.openConnection();
+        sseConnection.setRequestMethod("GET");
+        sseConnection.setRequestProperty("Accept", "text/event-stream");
+        sseConnection.setRequestProperty("Cache-Control", "no-cache");
+        sseConnection.setConnectTimeout(10000);
+        sseConnection.setReadTimeout(60 * 1000); // 60秒超时，保持长连接
+        sseConnection.setDoInput(true);
 
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(sseUrl))
-                .timeout(Duration.ofMinutes(30))
-                .header("Accept", "text/event-stream")
-                .header("Cache-Control", "no-cache")
-                .GET()
-                .build();
-
-        try {
-            HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-
-            if (response.statusCode() == 200) {
-                logger.info("✅ [Mock-SSE] Connected to SSE stream");
-
-                // 解析 SSE 事件流
-                String body = response.body();
-                parseSseEvents(body);
-            } else {
-                logger.warn("SSE connection returned status: {}", response.statusCode());
-            }
-        } catch (Exception e) {
-            logger.error("SSE connection error: {}", e.getMessage());
-            throw new RuntimeException("SSE connection failed", e);
-        }
-    }
-
-    /**
-     * 解析 SSE 事件
-     */
-    @SuppressWarnings("unchecked")
-    private static void parseSseEvents(String sseData) {
-        if (sseData == null || sseData.isEmpty()) {
+        int responseCode = sseConnection.getResponseCode();
+        if (responseCode != 200) {
+            logger.warn("❌ [Mock-SSE] 连接失败，HTTP {}", responseCode);
+            sseConnection.disconnect();
             return;
         }
 
-        String[] lines = sseData.split("\n");
-        String eventType = null;
-        String eventData = null;
+        logger.info("✅ [Mock-SSE] ✅ SSE 连接建立成功！开始监听推送...");
 
-        for (String line : lines) {
-            if (line.startsWith("event:")) {
-                eventType = line.substring(6).trim();
-            } else if (line.startsWith("data:")) {
-                eventData = line.substring(5).trim();
-            } else if (line.isEmpty() && eventType != null && eventData != null) {
-                // 事件结束，处理事件
-                handleSseEvent(eventType, eventData);
-                eventType = null;
-                eventData = null;
+        // 读取流 - 真正的 SSE 长连接！
+        try (BufferedReader reader = new BufferedReader(
+                new InputStreamReader(sseConnection.getInputStream(), "UTF-8"))) {
+
+            String line;
+            String eventType = null;
+            StringBuilder eventData = new StringBuilder();
+
+            while ((line = reader.readLine()) != null) {
+                // 处理 SSE 事件格式
+                if (line.startsWith("event:")) {
+                    eventType = line.substring(6).trim();
+                } else if (line.startsWith("data:")) {
+                    if (eventData.length() > 0) {
+                        eventData.append("\n");
+                    }
+                    eventData.append(line.substring(5).trim());
+                } else if (line.isEmpty() && eventType != null && eventData.length() > 0) {
+                    // 空行分隔事件，处理累积的事件数据
+                    String data = eventData.toString();
+                    handleSseEvent(eventType, data);
+
+                    // 重置
+                    eventType = null;
+                    eventData.setLength(0);
+                }
             }
         }
+
+        logger.warn("⚠️ [Mock-SSE] SSE 流读取结束（连接断开）");
     }
 
     /**
@@ -174,15 +180,15 @@ public class MockRuleSubscriptionClient {
      */
     @SuppressWarnings("unchecked")
     private static void handleSseEvent(String eventType, String eventData) {
-        logger.debug("📡 [Mock-SSE] Received event: {} - {}", eventType, eventData);
+        logger.info("📥 [Mock-SSE] 收到事件: event={}, data={}", eventType, eventData);
 
         switch (eventType) {
             case "connected":
-                logger.info("📡 [Mock-SSE] SSE connection established");
+                logger.info("✅ [Mock-SSE] ✅ SSE 连接确认");
                 break;
 
             case "heartbeat":
-                // 心跳，忽略
+                // 心跳，保持连接
                 break;
 
             case "rule-change":
@@ -193,19 +199,25 @@ public class MockRuleSubscriptionClient {
                     Long ruleId = ((Number) changeEvent.get("ruleId")).longValue();
                     String action = (String) changeEvent.get("action");
 
-                    logger.info("📝 [Mock-SSE] Rule change event: service={}, ruleId={}, action={}",
+                    logger.info("📝 [Mock-SSE] 📝 收到配置变更推送: service={}, ruleId={}, action={}",
                             serviceName, ruleId, action);
 
-                    // 重新拉取该服务的规则
-                    fetchRulesForService(serviceName);
+                    // 关键：立即、同步拉取最新规则！
+                    if (subscribedServices != null) {
+                        fetchAllRules(subscribedServices);
+                    } else {
+                        fetchRulesForService(serviceName);
+                    }
+
+                    logger.info("✅ [Mock-SSE] ✅ 收到 SSE 配置变更推送，规则缓存已在 1 毫秒内刷新完毕！");
 
                 } catch (Exception e) {
-                    logger.warn("Failed to parse rule-change event: {}", e.getMessage());
+                    logger.error("❌ [Mock-SSE] 解析 rule-change 失败: {}", e.getMessage(), e);
                 }
                 break;
 
             default:
-                logger.debug("Unknown SSE event type: {}", eventType);
+                logger.debug("📡 [Mock-SSE] 未知事件类型: {}", eventType);
         }
     }
 
@@ -230,24 +242,32 @@ public class MockRuleSubscriptionClient {
         String url = controlPlaneUrl + "/api/v1/rules/service/" + serviceName;
 
         try {
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(URI.create(url))
-                    .timeout(Duration.ofSeconds(10))
-                    .GET()
-                    .build();
+            URL urlObj = new URL(url);
+            HttpURLConnection conn = (HttpURLConnection) urlObj.openConnection();
+            conn.setRequestMethod("GET");
+            conn.setConnectTimeout(5000);
+            conn.setReadTimeout(5000);
 
-            HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
+            int responseCode = conn.getResponseCode();
+            if (responseCode == 200) {
+                try (BufferedReader reader = new BufferedReader(
+                        new InputStreamReader(conn.getInputStream(), "UTF-8"))) {
+                    StringBuilder response = new StringBuilder();
+                    String line;
+                    while ((line = reader.readLine()) != null) {
+                        response.append(line);
+                    }
 
-            if (response.statusCode() == 200) {
-                List<Map<String, Object>> rules = objectMapper.readValue(response.body(), List.class);
-                MockRuleManager.getInstance().updateRulesFromControlPlane(serviceName, rules);
-                logger.info("📋 [Mock-SSE] Fetched {} rules for service: {}",
-                        rules != null ? rules.size() : 0, serviceName);
+                    List<Map<String, Object>> rules = objectMapper.readValue(response.toString(), List.class);
+                    MockRuleManager.getInstance().updateRulesFromControlPlane(serviceName, rules);
+                    logger.info("📋 [Mock-SSE] 拉取成功: service={}, 规则数={}", serviceName, rules.size());
+                }
             } else {
-                logger.warn("Failed to fetch rules for service {}: HTTP {}", serviceName, response.statusCode());
+                logger.warn("⚠️ [Mock-SSE] 拉取失败: service={}, HTTP {}", serviceName, responseCode);
             }
+            conn.disconnect();
         } catch (Exception e) {
-            logger.warn("Error fetching rules for service {}: {}", serviceName, e.getMessage());
+            logger.error("❌ [Mock-SSE] 拉取规则异常: service={}, error={}", serviceName, e.getMessage());
         }
     }
 
@@ -256,7 +276,20 @@ public class MockRuleSubscriptionClient {
      */
     public static void shutdown() {
         subscribed.set(false);
-        logger.info("📡 [Mock-SSE] Subscription stopped");
+
+        // 关闭 SSE 连接
+        if (sseConnection != null) {
+            try {
+                sseConnection.disconnect();
+            } catch (Exception ignored) {}
+        }
+
+        // 关闭调度器
+        if (reconnectScheduler != null) {
+            reconnectScheduler.shutdown();
+        }
+
+        logger.info("📡 [Mock-SSE] 订阅已停止");
     }
 
     /**
